# CircuitPython_Cycling_Power_Service

./: LICENSE  README.md  README.rst  README.rst.license  cyclingPower.py  cycling_power_service.py  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml
examples/: cycling_power_service_simpletest.py
