# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2024 Ezra Schwartz
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-cycling-power-service"
description = "Cycling Power data is a library to help people use cycing power meters in their circuitpython code. This library allows users to extract power data from a power meter and read the data. The librarys goal is to make it more acessable to create projects involving power meters by streamlining the process of extracting the data from a power meter's bluetooth packet."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Ezra Schwartz", email = "ezra.n.schwartz@gmail.com"}
]
urls = {Homepage = "https://github.com/EzrSchwartz/CircuitPython_Cycling_Power_Service"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "cycling_power_service",
    "BLE",
    "Bluetooth",
    "Cycling",
    "Power",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["cycling_power_service"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
